# helm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  RUNNING.md
.github/workflows/: rust.yml
src/: ascii.rs  boolean.rs  circuit.rs  gates.rs  lib.rs  main.rs  shortint.rs  test_lut.rs  verilog_parser.rs
tests/: circuit_test.rs  gates_test.rs  verilog_parser_test.rs
verilog-files/: 2bit_adder.v  8bit-adder-lut.out.v  8bit-adder-lut.v  gates.v
verilog-files/inputs/: 2bit_adder.input.csv
verilog-files/netlists/: 2bit_adder.v  8bit-adder-lut.v  c1355.v  c17.v  c1908.v  c2670.v  c3540.v  c432.v  c499.v  c5315.v  c6288.v  c7552.v  c880.v  s27.out.v  s27.v
