[package]
name = "helm"
description = "HELM: Homomorphic Evaluation with EDA-driven Logic Minimization"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>", "Charles Gouert <cgouert@udel.edu>"]
keywords = ["cryptography", "homomorphic-encryption", "HE", "FHE"]
license = "MIT"

[dependencies]
clap = "4.2.2"
csv = "1.2.1"
debug_print = "1.0.0"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"
termion = "2.0.1"
tfhe = { version = "0.3.1", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
thiserror = "1.0"

[[bin]]
name = "helm"
path = "src/bin/helm.rs"
