[package]
name = "helm"
description = "HELM: Navigating Homomorphic Evaluation through Gates and Lookups"
version = "0.1.0"
edition = "2021"
authors = ["Dimitris Mouris <jimouris@udel.edu>", "Charles Gouert <cgouert@udel.edu>"]
keywords = ["cryptography", "homomorphic-encryption", "HE", "FHE"]
license = "MIT"

[dependencies]
clap = "4.2.2"
csv = "1.2.1"
debug_print = "1.0.0"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7.0"
termion = "2.0.1"
tfhe = { version = "0.4.1", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
concrete-core = {git = "https://github.com/TrustworthyComputing/concrete-core", rev = "28eb1ca", version = "=1.0.1", features=["backend_default", "backend_default_parallel", "backend_cuda"]}
thiserror = "1.0"

[[bin]]
name = "helm"
path = "src/bin/helm.rs"
